@@ -1,3 +1,7 @@
+2002-03-17  Anthony Green  <green@redhat.com>
+
+	* java/lang/ieeefp.h: Add ARM thumb support (copied from newlib).
+
 2002-03-17  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	Build a single libgcj.so, without separate gc and zlib libraries.
